--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,57 @@
-<!doctype html>
-<title>Hello from Flask</title>
-{% if name %}
-  <h1>Hello {{ name }}!</h1>
-{% else %}
-  <h1>Hello, World!</h1>
-{% endif %}
+<!DOCTYPE html>
+<html lang="en">
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<title>Capstone Project | Pankaj </title>
+
+<body>
+  <div class="container">
+    <h1>Sentiment based  recommendation System</h1>
+    <div class="row">
+      <div class="col">
+        <form class="row row-cols-lg-auto g-3 align-items-center" method="POST" action="/recommend">
+          <div class="col-12">
+            <label class="visually-hidden" for="User Name">Username</label>
+            <div class="input-group">
+              <div class="input-group-text">User Name</div>
+              <input type="text" class="form-control" id="User Name" name="User Name" placeholder="Username"
+              >
+            </div>
+          </div>
+          <div class="col-12">
+            <button type="submit" value="recommend" class="btn btn-primary">Submit</button>
+          </div>
+
+            
+             
+        </form>
+      </div>
+    </div>
+    <br><br>
+    <span style="color:rgb(10, 12, 11);">Sample username, please enter one at a time : </span>
+    <kbd>rebecca</kbd> &nbsp; <kbd>joshua</kbd> &nbsp; <kbd>samantha</kbd> &nbsp;<kbd>dorothy w</kbd>
+    <br>
+    <br>
+    <div class="alert alert-success" role="alert">
+      // {{text}}
+    </div>
+    <table class="table table-striped">
+      <tbody>
+        {% for row in row_data %}
+        <tr>
+          {% for col, row_ in zip(column_names, row) %}
+          <td>{{row_}}</td>
+          {% endfor %}
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</body>
+
+</html>
